--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,14 @@
             "scripts": []
           },
           "configurations": {
+            "hmr": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.hmr.ts"
+                }
+              ]
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -64,6 +72,10 @@
             "browserTarget": "ngbp:build"
           },
           "configurations": {
+            "hmr": {
+              "hmr": true,
+              "browserTarget": "ngbp:build:hmr"
+            },
             "production": {
               "browserTarget": "ngbp:build:production"
             }
