--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "check-dependencies --verbose && ng serve",
+    "hmr": "check-dependencies --verbose && ng serve --configuration hmr",
     "build": "ng build",
     "test": "ng test",
     "check-dependencies": "check-dependencies --scope-list dependencies --scope-list devDependencies --install",
@@ -36,7 +37,7 @@
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "npm": "^6.7.0",
+    "npm": "^6.9.0",
     "pa11y": "^5.1.0",
     "pa11y-reporter-html": "^1.0.0",
     "rxjs": "~6.3.3",
@@ -44,10 +45,11 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.3",
-    "@angular/cli": "^7.2.3",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "^7.3.8",
     "@angular/compiler-cli": "^7.2.8",
     "@angular/language-service": "~7.2.2",
+    "@angularclass/hmr": "^2.1.3",
     "@types/jasmine": "^2.8.14",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
