--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -14,101 +14,106 @@
 # Linter no-vendor-prefixes, option "identifier_list"
 
 files:
-  include: '**/src/**/*.s+(a|c)ss'
-
+  include: '**/*.scss'
+  ignore:
+    - 'node_modules/**'
+    - 'scss/core/_mixins.scss'
+    - 'scss/core/_linear-gradient.scss'
+    - 'scss/core/_icons.scss'
+    - 'scss/components/_normalize.scss'
 options:
   formatter: stylish
   merge-default-rules: false
 rules:
   bem-depth:
-    - 1
+    - 2
     - max-depth: 1
   border-zero:
-    - 1
+    - 2
     - convention: zero
   brace-style:
-    - 1
+    - 2
     - allow-single-line: true
   class-name-format:
-    - 1
+    - 2
     - convention: hyphenatedbem
   clean-import-paths:
-    - 1
+    - 2
     - filename-extension: false
       leading-underscore: false
   empty-line-between-blocks:
-    - 1
+    - 2
     - ignore-single-line-rulesets: true
   extends-before-declarations: 0
   extends-before-mixins: 0
   final-newline:
-    - 1
+    - 2
     - include: true
   force-attribute-nesting: 0
   force-element-nesting: 0
-  force-pseudo-nesting: 1
+  force-pseudo-nesting: 2
   function-name-format:
-    - 1
+    - 2
     - allow-leading-underscore: true
       convention: hyphenatedlowercase
   hex-length:
-    - 1
+    - 2
     - style: short
   hex-notation:
-    - 1
+    - 2
     - style: lowercase
   id-name-format:
-    - 1
+    - 2
     - convention: hyphenatedbem
   indentation:
-    - 1
+    - 2
     - size: 4
   leading-zero:
-    - 1
+    - 2
     - include: false
   mixin-name-format:
-    - 1
+    - 2
     - allow-leading-underscore: true
       convention: hyphenatedlowercase
-  mixins-before-declarations: 0
+  mixins-before-declarations: 2
   nesting-depth:
-    - 1
+    - 2
     - max-depth: 3
-  no-color-keywords: 1
-  no-color-literals: 1
-  no-css-comments: 1
-  no-debug: 1
-  no-duplicate-properties: 1
+  no-color-keywords: 2
+  no-color-literals: 2
+  no-css-comments: 2
+  no-debug: 2
+  no-duplicate-properties: 2
   no-empty-rulesets: 1
   no-extends: 0
-  no-ids: 1
-  no-important: 1
-  no-invalid-hex: 1
-  no-mergeable-selectors: 1
+  no-ids: 2
+  no-important: 2
+  no-invalid-hex: 2
+  no-mergeable-selectors: 2
   no-misspelled-properties:
-    - 1
+    - 2
     - extra-properties: []
   no-qualifying-elements:
-    - 1
+    - 2
     - allow-element-with-attribute: false
       allow-element-with-class: false
       allow-element-with-id: false
-  no-trailing-zero: 1
-  no-transition-all: 1
-  no-url-protocols: 1
+  no-trailing-zero: 2
+  no-transition-all: 2
+  no-url-protocols: 2
   no-vendor-prefixes:
-    - 1
+    - 2
     - additional-identifiers: []
       excluded-identifiers: []
-  placeholder-in-extend: 1
+  placeholder-in-extend: 2
   placeholder-name-format:
-    - 1
+    - 2
     - convention: hyphenatedbem
   property-sort-order:
-    - 1
+    - 2
     - ignore-custom-properties: false
   property-units:
-    - 1
+    - 2
     - global:
         - ch
         - em
@@ -139,41 +144,41 @@ rules:
         - '%'
       per-property: {}
   quotes:
-    - 1
+    - 2
     - style: single
   shorthand-values:
-    - 1
+    - 2
     - allowed-shorthands:
-        - 1
+        - 2
         - 2
         - 3
-  single-line-per-selector: 1
+  single-line-per-selector: 2
   space-after-bang:
-    - 1
+    - 2
     - include: false
   space-after-colon:
-    - 1
+    - 2
     - include: true
   space-after-comma:
-    - 1
+    - 2
     - include: true
   space-before-bang:
-    - 1
+    - 2
     - include: true
   space-before-brace:
-    - 1
+    - 2
     - include: true
   space-before-colon: 1
   space-between-parens:
-    - 1
+    - 2
     - include: false
-  trailing-semicolon: 1
-  url-quotes: 1
+  trailing-semicolon: 2
+  url-quotes: 2
   variable-for-property:
     - 0
     - properties: []
   variable-name-format:
-    - 1
+    - 2
     - allow-leading-underscore: true
       convention: hyphenatedlowercase
-  zero-unit: 1
+  zero-unit: 2
