--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "check-dependencies": "check-dependencies --scope-list dependencies --scope-list devDependencies --install",
     "test-headless": "npm run check-dependencies && ng test --browsers ChromeHeadless",
-    "sass-lint": "sass-lint -c src/.sass-lint.yml -v -q",
+    "sass-lint": "sass-lint -c .sass-lint.yml -v -q",
     "lint": "ng lint && npm run sass-lint",
     "e2e": "ng e2e --port=4201"
   },
@@ -45,8 +45,8 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.8",
-    "@angular/cli": "^7.3.8",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.9",
     "@angular/compiler-cli": "^7.2.8",
     "@angular/language-service": "~7.2.2",
     "@angularclass/hmr": "^2.1.3",
