--- a/package.json
+++ b/package.json
@@ -21,18 +21,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.2",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^7.2.2",
-    "@angular/common": "~7.2.2",
-    "@angular/compiler": "~7.2.2",
-    "@angular/core": "~7.2.2",
-    "@angular/forms": "~7.2.2",
-    "@angular/http": "~7.2.2",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
     "@angular/material": "^7.2.2",
     "@angular/material-moment-adapter": "^7.2.2",
-    "@angular/platform-browser": "~7.2.2",
-    "@angular/platform-browser-dynamic": "~7.2.2",
-    "@angular/router": "~7.2.2",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
     "core-js": "^2.6.2",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
@@ -40,21 +39,21 @@
     "npm": "^6.9.0",
     "pa11y": "^5.1.0",
     "pa11y-reporter-html": "^1.0.0",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.5.4",
     "sass-lint": "^1.12.1",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler-cli": "^7.2.8",
-    "@angular/language-service": "~7.2.2",
+    "@angular-devkit/build-angular": "~0.803.21",
+    "@angular/cli": "^8.3.21",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "~8.2.14",
     "@angularclass/hmr": "^2.1.3",
     "@types/jasmine": "^2.8.14",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "check-dependencies": "^1.1.0",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.0.1",
     "husky": "^1.3.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -66,6 +65,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~7.0.0",
     "tslint": "^5.12.1",
-    "typescript": "^3.2.4"
+    "typescript": "^3.5.3"
   }
 }
