--- a/package.json
+++ b/package.json
@@ -22,25 +22,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^7.2.2",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
-    "@angular/material": "^7.2.2",
-    "@angular/material-moment-adapter": "^7.2.2",
+    "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "core-js": "^2.6.2",
+    "core-js": "^3.6.1",
     "hammerjs": "^2.0.8",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "npm": "^6.9.0",
-    "pa11y": "^5.1.0",
+    "npm": "^6.13.4",
+    "pa11y": "^5.3.0",
     "pa11y-reporter-html": "^1.0.0",
     "rxjs": "~6.5.4",
-    "sass-lint": "^1.12.1",
+    "sass-lint": "^1.13.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -49,8 +49,8 @@
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "~8.2.14",
     "@angularclass/hmr": "^2.1.3",
-    "@types/jasmine": "^2.8.14",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "check-dependencies": "^1.1.0",
     "codelyzer": "^5.0.1",
@@ -59,12 +59,12 @@
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.4.2",
     "ts-node": "~7.0.0",
-    "tslint": "^5.12.1",
-    "typescript": "^3.5.3"
+    "tslint": "^5.20.1",
+    "typescript": "3.5.3"
   }
 }
