--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-bullet": "^1.0.3",
     "protractor": "^5.4.2",
     "ts-node": "~7.0.0",
     "tslint": "^5.20.1",
