--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ngbp2": {
+    "ngbp": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ngbp2",
+            "outputPath": "dist/ngbp",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -68,18 +68,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngbp2:build"
+            "browserTarget": "ngbp:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngbp2:build:production"
+              "browserTarget": "ngbp:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngbp2:build"
+            "browserTarget": "ngbp:build"
           }
         },
         "test": {
@@ -116,16 +116,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngbp2:serve"
+            "devServerTarget": "ngbp:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ngbp2:serve:production"
+              "devServerTarget": "ngbp:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "ngbp2"
+  "defaultProject": "ngbp"
 }
