--- a/.editorconfig
+++ b/.editorconfig
@@ -3,9 +3,12 @@ root = true
 
 [*]
 charset = utf-8
+end_of_line = lf
 indent_style = space
 indent_size = 2
 insert_final_newline = true
+max_line_length = 140
+tab_width =  4
 trim_trailing_whitespace = true
 
 [*.md]
