--- a/apps/tumbleweed/project.json
+++ b/apps/tumbleweed/project.json
@@ -1,24 +1,21 @@
 {
   "projectType": "application",
-  "root": "apps/tubleweed",
-  "sourceRoot": "apps/tubleweed/src",
+  "root": "apps/tumbleweed",
+  "sourceRoot": "apps/tumbleweed/src",
   "prefix": "ngbp",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/tubleweed",
-        "index": "apps/tubleweed/src/index.html",
-        "main": "apps/tubleweed/src/main.ts",
-        "polyfills": "apps/tubleweed/src/polyfills.ts",
-        "tsConfig": "apps/tubleweed/tsconfig.app.json",
+        "outputPath": "dist/apps/tumbleweed",
+        "index": "apps/tumbleweed/src/index.html",
+        "main": "apps/tumbleweed/src/main.ts",
+        "polyfills": "apps/tumbleweed/src/polyfills.ts",
+        "tsConfig": "apps/tumbleweed/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": [
-          "apps/tubleweed/src/favicon.ico",
-          "apps/tubleweed/src/assets"
-        ],
-        "styles": ["apps/tubleweed/src/styles.scss"],
+        "assets": ["apps/tumbleweed/src/favicon.ico", "apps/tumbleweed/src/assets"],
+        "styles": ["apps/tumbleweed/src/styles.scss"],
         "scripts": []
       },
       "configurations": {
@@ -37,8 +34,8 @@
           ],
           "fileReplacements": [
             {
-              "replace": "apps/tubleweed/src/environments/environment.ts",
-              "with": "apps/tubleweed/src/environments/environment.prod.ts"
+              "replace": "apps/tumbleweed/src/environments/environment.ts",
+              "with": "apps/tumbleweed/src/environments/environment.prod.ts"
             }
           ],
           "outputHashing": "all"
@@ -58,10 +55,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "tubleweed:build:production"
+          "browserTarget": "tumbleweed:build:production"
         },
         "development": {
-          "browserTarget": "tubleweed:build:development"
+          "browserTarget": "tumbleweed:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -69,23 +66,20 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "tubleweed:build"
+        "browserTarget": "tumbleweed:build"
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": [
-          "apps/tubleweed/src/**/*.ts",
-          "apps/tubleweed/src/**/*.html"
-        ]
+        "lintFilePatterns": ["apps/tumbleweed/src/**/*.ts", "apps/tumbleweed/src/**/*.html"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/tubleweed"],
+      "outputs": ["coverage/apps/tumbleweed"],
       "options": {
-        "jestConfig": "apps/tubleweed/jest.config.js",
+        "jestConfig": "apps/tumbleweed/jest.config.js",
         "passWithNoTests": true
       }
     }
