--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,23 @@
               }
             ]
           }
-        ]
+        ],
+        "no-duplicate-imports": "error",
+        "no-ex-assign": "error",
+        "no-self-assign": "warn",
+        "no-unused-vars": ["warn", {"vars":  "all", "args":  "all"}],
+        "use-isnan": "error",
+        "valid-typeof": "error",
+        "camelcase": ["error",
+          {
+            "ignoreGlobals": true
+          }],
+        "eqeqeq": "error",
+        "dot-notation": "error",
+        "no-console": "error",
+        "no-magic-numbers": ["error", {"ignoreArrayIndexes":  true, "ignoreDefaultValues": true, "enforceConst":  true}],
+        "no-nested-ternary": "error",
+        "no-mixed-spaces-and-tabs": "error"
       }
     },
     {
