prettier config update

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,7 @@
 {
-  "singleQuote": true
+  "singleQuote": true,
+  "arrowParens": "always",
+  "printWidth": 80,
+  "semi": true,
+  "bracketSpacing": true
 }
