--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "lint": "nx lint",
+    "lint:all": "nx lint --all",
+    "affected:lint": "nx affected:lint",
+    "affected:test": "nx affected:test"
   },
   "private": true,
   "dependencies": {
