--- a/package.json
+++ b/package.json
@@ -1,50 +1,60 @@
 {
   "name": "ngbp",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
-    "ng": "ng",
-    "start": "check-dependencies --verbose && ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "check-dependencies": "check-dependencies --scope-list dependencies --scope-list devDependencies --install",
-    "test-headless": "npm run check-dependencies && ng test --browsers ChromeHeadless",
-    "sass-lint": "sass-lint -c .sass-lint.yml -v -q",
-    "lint": "ng lint && npm run sass-lint",
-    "e2e": "ng e2e --port=4201"
+    "ng": "nx",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
+    "lint": "nx lint",
+    "lint:all": "nx lint --all",
+    "affected:lint": "nx affected:lint",
+    "affected:test": "nx affected:test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.3",
-    "@angular/common": "~11.2.3",
-    "@angular/compiler": "~11.2.3",
-    "@angular/core": "~11.2.3",
-    "@angular/forms": "~11.2.3",
-    "@angular/platform-browser": "~11.2.3",
-    "@angular/platform-browser-dynamic": "~11.2.3",
-    "@angular/router": "~11.2.3",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "@angular/animations": "13.3.0",
+    "@angular/common": "13.3.0",
+    "@angular/compiler": "13.3.0",
+    "@angular/core": "13.3.0",
+    "@angular/forms": "13.3.0",
+    "@angular/platform-browser": "13.3.0",
+    "@angular/platform-browser-dynamic": "13.3.0",
+    "@angular/router": "13.3.0",
+    "@nrwl/angular": "13.9.3",
+    "rxjs": "7.5.5",
+    "tslib": "2.3.1",
+    "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.2",
-    "@angular/cli": "~11.2.2",
-    "@angular/compiler-cli": "~11.2.3",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "check-dependencies": "^1.1.0",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "sass-lint": "^1.13.1",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
+    "@angular-devkit/build-angular": "13.3.0",
+    "@angular-eslint/eslint-plugin": "13.1.0",
+    "@angular-eslint/eslint-plugin-template": "13.1.0",
+    "@angular-eslint/template-parser": "13.1.0",
+    "@angular/cli": "13.3.0",
+    "@angular/compiler-cli": "13.3.0",
+    "@angular/language-service": "13.3.0",
+    "@nrwl/cli": "13.9.3",
+    "@nrwl/cypress": "13.9.3",
+    "@nrwl/eslint-plugin-nx": "13.9.3",
+    "@nrwl/jest": "13.9.3",
+    "@nrwl/linter": "13.9.3",
+    "@nrwl/workspace": "13.9.3",
+    "@types/jest": "27.4.1",
+    "@types/node": "17.0.21",
+    "@typescript-eslint/eslint-plugin": "5.15.0",
+    "@typescript-eslint/parser": "5.15.0",
+    "cypress": "9.5.2",
+    "eslint": "8.11.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-cypress": "2.12.1",
+    "jest": "27.5.1",
+    "jest-preset-angular": "11.1.1",
+    "nx": "13.9.3",
+    "prettier": "2.6.0",
+    "ts-jest": "27.1.3",
+    "typescript": "4.6.2"
   }
 }
