--- a/.editorconfig
+++ b/.editorconfig
@@ -7,10 +7,9 @@ end_of_line = lf
 indent_style = space
 indent_size = 2
 insert_final_newline = true
+max_line_length = 140
+tab_width =  4
 trim_trailing_whitespace = true
-
-[*.ts]
-quote_type = single
 
 [*.md]
 max_line_length = off
